--- a/SisMaper/MainWindow.xaml
+++ b/SisMaper/MainWindow.xaml
@@ -1,12 +1,14 @@
-﻿<Window x:Class="SisMaper.MainWindow"
+﻿<mah:MetroWindow x:Class="SisMaper.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:SisMaper"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
 
     </Grid>
-</Window>
+    
+</mah:MetroWindow>
