--- a/SisMaper/Views/Login.xaml
+++ b/SisMaper/Views/Login.xaml
@@ -10,12 +10,12 @@
     TitleCharacterCasing="Normal"
     Height="310"
     Width="510"
-    WindowStyle="ToolWindow"
+    WindowStyle="SingleBorderWindow"
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     xmlns:templates="clr-namespace:SisMaper.Views.Templates"
     ShowMaxRestoreButton="False">
-    
+
     <mah:MetroWindow.Resources>
         <Style x:Key="TextBoxLogin" TargetType="{x:Type TextBox}">
             <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Control.Background}" />
@@ -44,18 +44,18 @@
             <Setter Property="SnapsToDevicePixels" Value="True" />
         </Style>
         <Style x:Key="ToggleButtonImage" TargetType="{x:Type ToggleButton}">
-            <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Transparent}"/>
-            <Setter Property="BorderBrush" Value="{DynamicResource MahApps.Brushes.Transparent}"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Foreground" Value="{DynamicResource MahApps.Brushes.Transparent}"/>
-            <Setter Property="MinHeight" Value="0"/>
-            <Setter Property="Padding" Value="0 0"/>
+            <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Transparent}" />
+            <Setter Property="BorderBrush" Value="{DynamicResource MahApps.Brushes.Transparent}" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Foreground" Value="{DynamicResource MahApps.Brushes.Transparent}" />
+            <Setter Property="MinHeight" Value="0" />
+            <Setter Property="Padding" Value="0 0" />
 
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="ToggleButton">
                         <Grid x:Name="GD">
-                            <ContentPresenter x:Name="CP" Content="{TemplateBinding Content}"></ContentPresenter>
+                            <ContentPresenter x:Name="CP" Content="{TemplateBinding Content}" />
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
@@ -65,18 +65,18 @@
     </mah:MetroWindow.Resources>
     <Grid
         MouseLeftButtonDown="ArrastarTela"
-        Background="White">
+        Background="White" Margin="0,0,0,0">
         <Label
             x:Name="lb_usuario"
             Content="Usuário"
             HorizontalAlignment="Left"
-            Margin="292,47,0,0"
+            Margin="322,30,0,0"
             VerticalAlignment="Top"
             FontSize="16" />
         <TextBox Style="{DynamicResource TextBoxLogin}"
                  x:Name="tb_usuario"
                  HorizontalAlignment="Left"
-                 Margin="292,78,0,0"
+                 Margin="322,61,0,0"
                  VerticalAlignment="Top"
                  Width="164"
                  Height="32" />
@@ -84,7 +84,7 @@
             x:Name="lb_senha"
             Content="Senha"
             HorizontalAlignment="Left"
-            Margin="292,113,0,0"
+            Margin="322,96,0,0"
             VerticalAlignment="Top"
             FontSize="16" />
 
@@ -92,27 +92,28 @@
                  x:Name="tb_senha"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
-                 Margin="292,144,0,0"
+                 Margin="322,127,0,0"
                  Width="164"
                  Height="32"
-                 Text="{Binding Password, Mode=TwoWay, ElementName=pb_senha, UpdateSourceTrigger=PropertyChanged}" Visibility="Collapsed" />
+                 Text="{Binding Password, Mode=TwoWay, ElementName=pb_senha, UpdateSourceTrigger=PropertyChanged}"
+                 Visibility="Collapsed" />
         <PasswordBox
             x:Name="pb_senha"
             Style="{DynamicResource PasswordBoxLogin}"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
-            Margin="292,144,0,0"
+            Margin="322,127,0,0"
             Width="164"
             Height="32"
             KeyDown="Confirm_Login"
-            MaxLength="13"/>
+            MaxLength="13" />
         <Button
             Style="{DynamicResource LoginButtonStyle}"
             x:Name="btn_login"
             Content="Acessar"
             HorizontalAlignment="Left"
-            Margin="386,206,0,0"
             VerticalAlignment="Top"
+            Margin="322,189,0,0"
             Height="33"
             Width="70"
             PreviewMouseLeftButtonUp="Confirm_Login"
@@ -125,7 +126,7 @@
             Content="Cancelar"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
-            Margin="292,206,0,0"
+            Margin="410,189,0,0"
             Height="33"
             Width="76"
             PreviewMouseLeftButtonUp="Close_Login"
@@ -133,24 +134,29 @@
             BorderBrush="#FF960000"
             Foreground="#FF960000" />
         <Rectangle
-            HorizontalAlignment="Center"
-            Height="234"
+            HorizontalAlignment="Left"
+            Height="197"
             Stroke="Gray"
             VerticalAlignment="Center"
-            Width="1" />
-        <ToggleButton Style="{DynamicResource ToggleButtonImage}" HorizontalAlignment="Left" Margin="429,150,0,0" VerticalAlignment="Top" Height="19" Width="27"
+            Width="1" Margin="298,0,0,0" />
+        <ToggleButton Style="{DynamicResource ToggleButtonImage}" HorizontalAlignment="Left" Margin="459,133,0,0"
+                      VerticalAlignment="Top" Height="19" Width="27"
                       Padding="0,0,0,0" Checked="ShowPassword" Unchecked="HidePassword"
                       Focusable="False" ClickMode="Press">
             <Image x:Name="img_hideShow" Source="/Images/Show.png" Opacity="0.5" />
         </ToggleButton>
         <Button PreviewMouseLeftButtonDown="ChangeTheme" Content="Mudar Tema" HorizontalAlignment="Left"
-                Margin="25,188,0,0" VerticalAlignment="Top" >
+                Margin="10,221,0,0" VerticalAlignment="Top" Visibility="Collapsed">
             <Button.ToolTip>
                 <ToolTip templates:ToolTipHelper.AutoMove="True"
-                 Content="Awesome solution for a ToolTip..." />
+                         Content="Awesome solution for a ToolTip..." />
             </Button.ToolTip>
         </Button>
-        <Label x:Name="LblTheme" Content="Tema atual: Light.Teal" HorizontalAlignment="Left" Margin="25,160,0,0"
-               VerticalAlignment="Top" Height="26" Width="123" />
+        <Label x:Name="LblTheme" Content="Tema atual: Light.Teal" HorizontalAlignment="Left" Margin="86,222,0,0"
+               VerticalAlignment="Top" Height="26" Width="123" Visibility="Collapsed" />
+        <Image HorizontalAlignment="Left" Height="88" Margin="10,62,0,0" VerticalAlignment="Top" Width="275"
+               Source="/Images/Sismaper Logo.png" Stretch="Fill"/>
+        <Rectangle HorizontalAlignment="Center" Height="24" Margin="0,248,0,0" VerticalAlignment="Bottom" Width="510" Fill="#FF18343F"/>
+        <Label Content="Versão: 1.1.0" HorizontalAlignment="Right" Margin="0,0,13,3" VerticalAlignment="Bottom" Height="16" Width="92" Padding="0,0,0,0" Foreground="White" FlowDirection="RightToLeft" FontSize="11"/>
     </Grid>
 </mah:MetroWindow>
