--- a/SisMaper/Views/Login.xaml
+++ b/SisMaper/Views/Login.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:templates="clr-namespace:SisMaper.Views.Templates"
     mc:Ignorable="d"
     Title="Login - SisMaper"
     TitleCharacterCasing="Normal"
@@ -13,7 +14,6 @@
     WindowStyle="SingleBorderWindow"
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
-    xmlns:templates="clr-namespace:SisMaper.Views.Templates"
     ShowMaxRestoreButton="False">
 
     <mah:MetroWindow.Resources>
@@ -30,20 +30,7 @@
             <Setter Property="SelectionBrush" Value="{DynamicResource MahApps.Brushes.Highlight}" />
             <Setter Property="SnapsToDevicePixels" Value="True" />
         </Style>
-        <Style x:Key="PasswordBoxLogin" TargetType="{x:Type PasswordBox}">
-            <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Control.Background}" />
-            <Setter Property="BorderBrush" Value="Gray" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="CaretBrush" Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
-            <Setter Property="ContextMenu" Value="{DynamicResource MahApps.TextBox.ContextMenu}" />
-            <Setter Property="FontFamily" Value="{DynamicResource MahApps.Fonts.Family.Control}" />
-            <Setter Property="FontSize" Value="16" />
-            <Setter Property="Foreground" Value="{DynamicResource MahApps.Brushes.Text}" />
-            <Setter Property="Padding" Value="4" />
-            <Setter Property="SelectionBrush" Value="{DynamicResource MahApps.Brushes.Highlight}" />
-            <Setter Property="SnapsToDevicePixels" Value="True" />
-        </Style>
-        <Style x:Key="ToggleButtonImage" TargetType="{x:Type ToggleButton}">
+        <Style x:Key="ToggleButtonImage" TargetType="{x:Type templates:ToggleImage}">
             <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Transparent}" />
             <Setter Property="BorderBrush" Value="{DynamicResource MahApps.Brushes.Transparent}" />
             <Setter Property="BorderThickness" Value="0" />
@@ -53,9 +40,14 @@
 
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="ToggleButton">
-                        <Grid x:Name="GD">
-                            <ContentPresenter x:Name="CP" Content="{TemplateBinding Content}" />
+                    <ControlTemplate TargetType="templates:ToggleImage">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <Image Source="{TemplateBinding Image}" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0"
+                                   Margin="0" />
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
@@ -88,27 +80,18 @@
             VerticalAlignment="Top"
             FontSize="16" />
 
-        <TextBox
-            Style="{DynamicResource TextBoxLogin}"
-            x:Name="tb_senha"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Margin="322,127,0,0"
-            Width="164"
-            Height="32"
-            KeyDown="Confirm_Login"
-            Text="{Binding Password, Mode=TwoWay, ElementName=pb_senha, UpdateSourceTrigger=PropertyChanged}"
-            Visibility="Collapsed" />
-        <PasswordBox
+        <templates:MyPasswordBox
             x:Name="pb_senha"
-            Style="{DynamicResource PasswordBoxLogin}"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Margin="322,127,0,0"
             Width="164"
             Height="32"
+            FontSize="16"
             KeyDown="Confirm_Login"
-            MaxLength="13" />
+            ContentPadding="4,4,28,4"
+            MaxLength="30"/>
+         
         <Button
             Style="{DynamicResource LoginButtonStyle}"
             x:Name="btn_login"
@@ -117,46 +100,40 @@
             VerticalAlignment="Top"
             Margin="322,189,0,0"
             Height="33"
-            Width="70"
+            Width="109"
             PreviewMouseLeftButtonUp="Confirm_Login"
-            Foreground="Teal"
+            Foreground="#FF18343F"
             Background="Turquoise"
-            BorderBrush="Teal" />
+            BorderBrush="#FF18343F" />
         <Button
             Style="{DynamicResource LoginButtonStyle}"
             x:Name="btn_cancelar"
-            Content="Cancelar"
+            Content="Sair"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
-            Margin="410,189,0,0"
+            Margin="440,189,0,0"
             Height="33"
-            Width="76"
+            Width="46"
             PreviewMouseLeftButtonUp="Close_Login"
             Background="#FFFF9A9A"
-            BorderBrush="#FF960000"
-            Foreground="#FF960000" />
+            BorderBrush="#FF5C0000"
+            Foreground="#FF5C0000" />
         <Rectangle
             HorizontalAlignment="Left"
             Height="197"
             Stroke="Gray"
             VerticalAlignment="Center"
             Width="1" Margin="298,0,0,0" />
-        <ToggleButton Style="{DynamicResource ToggleButtonImage}" HorizontalAlignment="Left" Margin="459,133,0,0"
-                      VerticalAlignment="Top" Height="19" Width="27"
-                      Padding="0,0,0,0" Checked="ShowPassword" Unchecked="HidePassword"
-                      Focusable="False" ClickMode="Press">
-            <Image x:Name="img_hideShow" Source="/Images/Show.png" Opacity="0.5" />
-        </ToggleButton>
-        <Button PreviewMouseLeftButtonDown="ChangeTheme" Content="Mudar Tema" HorizontalAlignment="Left"
-                Margin="10,221,0,0" VerticalAlignment="Top" Visibility="Collapsed">
-            <Button.ToolTip>
-                <ToolTip templates:ToolTipHelper.AutoMove="True"
-                         Content="Awesome solution for a ToolTip..." />
-            </Button.ToolTip>
-        </Button>
-        <Label x:Name="LblTheme" Content="Tema atual: Light.Teal" HorizontalAlignment="Left" Margin="86,222,0,0"
-               VerticalAlignment="Top" Height="26" Width="123" Visibility="Collapsed" />
-        <Image HorizontalAlignment="Left" Height="88" Margin="10,62,0,0" VerticalAlignment="Top" Width="275"
+        <templates:ToggleImage
+            Style="{DynamicResource ToggleButtonImage}"
+            HorizontalAlignment="Left" Margin="459,133,0,0"
+            VerticalAlignment="Top" Height="19" Width="27"
+            Padding="0,0,0,0" Checked="ShowPassword" Unchecked="HidePassword"
+            CheckImage="/Images/Hide.png" UncheckImage="/Images/Show.png"
+            Image="/Images/Show.png"
+            Opacity="0.5"
+            Focusable="False" ClickMode="Press" />
+        <Image HorizontalAlignment="Left" Height="88" Margin="10,77,0,0" VerticalAlignment="Top" Width="275"
                Source="/Images/Sismaper Logo.png" Stretch="Fill" />
         <Rectangle HorizontalAlignment="Center" Height="24" Margin="0,248,0,0" VerticalAlignment="Bottom" Width="510"
                    Fill="#FF18343F" />
