--- a/SisMaper/Views/Login.xaml
+++ b/SisMaper/Views/Login.xaml
@@ -102,9 +102,9 @@
             Height="33"
             Width="109"
             PreviewMouseLeftButtonUp="Confirm_Login"
-            Foreground="#FF18343F"
-            Background="Turquoise"
-            BorderBrush="#FF18343F" />
+            Foreground="{DynamicResource SisMaper.Dark.Theme}"
+            Background="{DynamicResource SisMaper.Ligth.Theme}"
+            BorderBrush="{DynamicResource SisMaper.Dark.Theme}"/>
         <Button
             Style="{DynamicResource LoginButtonStyle}"
             x:Name="btn_cancelar"
@@ -136,7 +136,7 @@
         <Image HorizontalAlignment="Left" Height="88" Margin="10,77,0,0" VerticalAlignment="Top" Width="275"
                Source="/Images/Sismaper Logo.png" Stretch="Fill" />
         <Rectangle HorizontalAlignment="Center" Height="24" Margin="0,248,0,0" VerticalAlignment="Bottom" Width="510"
-                   Fill="#FF18343F" />
+                   Fill="{DynamicResource SisMaper.Dark.Theme}" />
         <Label Content="Versão: 1.1.0" HorizontalAlignment="Right" Margin="0,0,13,3" VerticalAlignment="Bottom"
                Height="16" Width="92" Padding="0,0,0,0" Foreground="White" FlowDirection="RightToLeft" FontSize="11" />
     </Grid>
