--- a/SisMaper/Views/Style/Style.xaml
+++ b/SisMaper/Views/Style/Style.xaml
@@ -130,6 +130,14 @@
             </MultiDataTrigger>
         </Style.Triggers>
     </Style>
+    <Style x:Key="Button2" TargetType="{x:Type Button}"
+               BasedOn="{StaticResource MahApps.Styles.Button.MetroWindow.Base}">
+        <Setter Property="Width" Value="75" />
+        <Setter Property="Height" Value="75" />
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Background" Value="{StaticResource MahApps.Brushes.Gray9}" />
+        
+    </Style>
 
 
 </ResourceDictionary>
