--- a/SisMaper/Views/ViewPedido.xaml
+++ b/SisMaper/Views/ViewPedido.xaml
@@ -13,6 +13,7 @@
     xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
     xmlns:iconpacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     x:Class="SisMaper.Views.ViewPedido"
+    x:Name="this"
     mc:Ignorable="d"
     Title="Pedido - 00024"
     TitleCharacterCasing="Normal"
@@ -176,9 +177,9 @@
         <DatePicker
             FontSize="15"
             HorizontalAlignment="Right"
-            Margin="0,25,20,0"
+            Margin="0,24,20,0"
             VerticalAlignment="Top"
-            Height="30"
+            Height="32"
             Width="211" />
         <TextBlock
             HorizontalAlignment="Left"
@@ -264,14 +265,14 @@
             Background="WhiteSmoke"
             mah:HeaderedControlHelper.HeaderFontSize="18">
             <TabItem
-                Header="Itens"
+                Header="  Itens  "
                 mah:HeaderedControlHelper.HeaderBackground="Black">
                 <Grid>
                     <ComboBox
                         Grid.Row="0"
                         x:Name="cmbProduto"
                         Height="32"
-                        Margin="10,10,260,0"
+                        Margin="10,10,296,0"
                         FontSize="16"
                         mah:TextBoxHelper.Watermark="Buscar Produto"
                         DisplayMemberPath="Descricao"
@@ -291,7 +292,7 @@
                         FontSize="16"
                         Style="{DynamicResource TextBoxStyle1}"
                         HorizontalAlignment="Right"
-                        Margin="0,9,118,0"
+                        Margin="0,10,118,0"
                         TextWrapping="Wrap"
                         VerticalAlignment="Top"
                         Width="106"
@@ -338,29 +339,56 @@
                                 StringFormat="{}{0:N2}"
                                 Culture="pt-BR"
                                 Binding="{Binding Valor}"
-                                IsReadOnly="false" />
+                                IsReadOnly="true" />
                             <mah:DataGridNumericUpDownColumn
                                 Width="35*"
-                                Header="Desconto(R$)"
+                                Header="Desconto(%)"
                                 StringFormat="{}{0:N2}"
+                                Minimum="0"
+                                Maximum="100"
+                                Interval="0.1"
                                 Culture="pt-BR"
-                                Binding="{Binding Desconto}"
+                                Binding="{Binding DescontoPorcentagem}"
                                 IsReadOnly="false" />
                             <mah:DataGridNumericUpDownColumn
                                 Width="35*"
                                 Header="Total(R$)"
                                 StringFormat="{}{0:N2}"
                                 Culture="pt-BR"
-                                Binding="{Binding Total, Mode=OneWay}"
+                                Binding="{Binding Total, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                 IsReadOnly="True" />
                         </DataGrid.Columns>
+                        <DataGrid.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem
+                                    Header="Remover"
+                                    Click="Context_Delete">
+                                    <MenuItem.Icon>
+                                        <Image
+                                            Width="12"
+                                            Height="12"
+                                            Source="/Images/Delete.png" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+                                <MenuItem
+                                    Header="Editar"
+                                    Click="Context_Delete">
+                                    <MenuItem.Icon>
+                                        <Image
+                                            Width="12"
+                                            Height="12"
+                                            Source="/Images/Edit.png" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+                            </ContextMenu>
+                        </DataGrid.ContextMenu>
                     </DataGrid>
                     <Button
                         Style="{DynamicResource OptionsButtonStyle}"
                         Content="Adicionar"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Top"
-                        Margin="0,9,10,0" />
+                        Margin="0,10,10,0" />
                     <TextBox
                         IsEnabled="False"
                         x:Name="ValorTotal"
@@ -382,15 +410,22 @@
                             Language="pt-br"
                             Text="Valor Total" />
                     </TextBlock>
+                    <iconpacks:PackIconMaterial
+            Kind="MagnifyPlus"
+            Margin="0,14,268,0"
+            Height="24"
+            Width="23"
+            Foreground="#FF939393"
+            HorizontalAlignment="Right" PreviewMouseDoubleClick="WindowLote" />
 
                 </Grid>
             </TabItem>
             <TabItem
-                Header="Fatura">
+                Header="  Fatura  ">
                 <Grid />
             </TabItem>
             <TabItem
-                Header="Nota Fiscal">
+                Header="  Nota Fiscal  ">
                 <Grid />
             </TabItem>
         </TabControl>
@@ -422,5 +457,34 @@
             Width="23"
             Foreground="#FF939393"
             HorizontalAlignment="Right" />
+        <TextBlock
+            HorizontalAlignment="Right"
+            Margin="0,75,246,0"
+            TextWrapping="Wrap"
+            VerticalAlignment="Top"
+            Height="27"
+            RenderTransformOrigin="0.624,0.464">
+            <Run
+                Language="pt-br"
+                Text="Natureza" />
+            <LineBreak />
+            <Run
+                Language="pt-br" />
+        </TextBlock>
+        <ComboBox
+            Grid.Row="0"
+            x:Name="cmbCliente_Copy"
+            Height="32"
+            Margin="581,70,20,0"
+            FontSize="16"
+            mah:TextBoxHelper.Watermark="Buscar Natureza"
+            DisplayMemberPath="Nome"
+            IsEditable="True"
+            Text="Venda Normal"
+            MaxDropDownHeight="125"
+            mah:TextBoxHelper.WatermarkAlignment="Right"
+            mah:TextBoxHelper.AutoWatermark="True"
+            Grid.IsSharedSizeScope="True"
+            VerticalAlignment="Top" />
     </Grid>
 </mah:MetroWindow>
